--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <!-- external css -->
-  <link rel="stylesheet" href="common.css">
+  <link rel="stylesheet" href="css/common.css?v=1">
 </head>
 <body>
   <nav class="navbar navbar-expand navbar-light" style="background-color: #e9ecef;">
