--- a/advanced.html
+++ b/advanced.html
@@ -25,10 +25,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/floatthead/2.1.3/jquery.floatThead.min.js"></script>
   <!-- external css -->
-  <link rel="stylesheet" href="common.css">
-  <link rel="stylesheet" href="advanced.css">
+  <link rel="stylesheet" href="css/common.css?v=1">
+  <link rel="stylesheet" href="css/advanced.css?v=1">
   <!-- external js -->
-  <script src="advanced.js"></script>
+  <script src="js/advanced.js?v=1"></script>
 </head>
 <body>
   <nav class="navbar navbar-expand navbar-light" style="background-color: #e9ecef;">
