add the source of the data

--- a/advanced.html
+++ b/advanced.html
@@ -111,6 +111,9 @@
         </tbody>
       </table>
       <button type="button" class="btn btn-primary btn-block d-none mb-3" id="more-results">更多結果</button>
+      <p style="text-align: center">
+        本查詢結果僅供參考，實際內容以正式簡章為主。
+      </p>
     </div>
   </div>
   <div class="footer">
