--- a/apply.html
+++ b/apply.html
@@ -134,6 +134,9 @@
 
         </tbody>
       </table>
+      <p style="text-align: center">
+        本查詢結果僅供參考，實際內容以正式簡章為主。
+      </p>
     </div>
   </div>
   <div class="footer">
