--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
         <h2>點擊上方的「個人申請」或者是「考試分發」，就可以開始查詢囉！</h2>
       </div>
     </div>
+    <div class="container">
+      <h3>資料來源</h3>
+      <p>
+        個人申請：<a href="https://www.cac.edu.tw/">大學甄選入學委員會</a><br>
+        考試分發：<a href="https://www.uac.edu.tw/">大學考試入學分發委員會</a>
+      </p>
+    </div>
   </div>
   <div class="footer">
     <a href="https://github.com/jacky030607/apply-tool">GitHub</a>
