--- a/advanced.html
+++ b/advanced.html
@@ -25,20 +25,20 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/floatthead/2.1.3/jquery.floatThead.min.js"></script>
   <!-- external css -->
-  <link rel="stylesheet" href="css/common.css?v=1">
-  <link rel="stylesheet" href="css/advanced.css?v=1">
+  <link rel="stylesheet" href="css/common.css?v=2">
+  <link rel="stylesheet" href="css/advanced.css?v=2">
   <!-- external js -->
   <script src="js/advanced.js?v=2"></script>
 </head>
 <body>
-  <nav class="navbar navbar-expand navbar-light" style="background-color: #e9ecef;">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link" href="/">首頁</a>
-      <a class="nav-item nav-link" href="apply.html">個人申請</a>
-      <a class="nav-item nav-link active" href="advanced.html">考試分發</a>
-    </div>
-  </nav>
   <div class="content">
+    <nav class="navbar navbar-expand navbar-light" style="background-color: #e9ecef;">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="/">首頁</a>
+        <a class="nav-item nav-link" href="apply.html">個人申請</a>
+        <a class="nav-item nav-link active" href="advanced.html">考試分發</a>
+      </div>
+    </nav>
     <!-- title bar -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
@@ -48,25 +48,18 @@
     </div>
     <div class="container">
       <!-- search form -->
-      <div class="form-group input-group mb-3">
+      <div class="input-group mb-3">
         <input type="text" class="form-control" id="qd" placeholder="科系名稱" value="" oninput="update();" maxlength="30">
-        <div class="input-group-append">
-          <span class="input-group-text">@</span>
-        </div>
         <input type="text" class="form-control" id="qs" placeholder="學校名稱" value="" oninput="update();" maxlength="30">
         <div class="input-group-append">
           <button id="btn_advanced" type="button" class="btn btn-secondary" data-toggle="collapse" data-target="#advanced_options">
             <span class="d-none d-md-inline">進階</span>選項
           </button>
-        </div>
-        <div class="input-group-append">
-          <button class="btn btn-primary" onclick="update()">
-            搜尋
-          </button>
+          <button class="btn btn-primary" onclick="update()">搜尋</button>
         </div>
       </div>
       <!-- advanced options -->
-      <div id="advanced_options" class="collapse form-inline float-right mb-3">
+      <div id="advanced_options" class="collapse float-right">
         <div class="form-group">
           <span id="mode-title">搜尋模式：</span>
           <div class="custom-control custom-radio custom-control-inline">
@@ -83,8 +76,8 @@
       <table class="table table-bordered table-sm" id="table_result">
         <thead class="thead-light">
           <tr>
-            <th id="school" class="align-middle" rowspan="2">學校</th>
-            <th id="name" class="align-middle" rowspan="2">科系</th>
+            <th style="width: 15%" class="align-middle" rowspan="2">學校</th>
+            <th style="width: 20%" class="align-middle" rowspan="2">科系</th>
             <th class="subject align-middle">國文</th>
             <th class="subject align-middle">英文</th>
             <th class="subject align-middle">數甲</th>
