--- a/apply.html
+++ b/apply.html
@@ -25,20 +25,20 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/floatthead/2.1.3/jquery.floatThead.min.js"></script>
   <!-- external css -->
-  <link rel="stylesheet" href="css/common.css?v=1">
+  <link rel="stylesheet" href="css/common.css?v=2">
   <link rel="stylesheet" href="css/apply.css?v=1">
   <!-- external js -->
   <script src="js/apply.js?v=1"></script>
 </head>
 <body>
-  <nav class="navbar navbar-expand navbar-light"  style="background-color: #e9ecef;">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link" href="/">首頁</a>
-      <a class="nav-item nav-link active" href="apply.html">個人申請</a>
-      <a class="nav-item nav-link" href="advanced.html">考試分發</a>
-    </div>
-  </nav>
   <div class="content">
+    <nav class="navbar navbar-expand navbar-light"  style="background-color: #e9ecef;">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="/">首頁</a>
+        <a class="nav-item nav-link active" href="apply.html">個人申請</a>
+        <a class="nav-item nav-link" href="advanced.html">考試分發</a>
+      </div>
+    </nav>
     <!-- title bar -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
@@ -50,22 +50,17 @@
     <div class="container">
       <div class="form-group input-group mb-3">
         <input type="text" class="form-control" id="qd" placeholder="科系名稱" value="" oninput="update();" maxlength="30">
-        <div class="input-group-append">
-          <span class="input-group-text">@</span>
-        </div>
         <input type="text" class="form-control" id="qs" placeholder="學校名稱" value="" oninput="update();" maxlength="30">
         <div class="input-group-append">
-          <button id="btn_advanced" type="button" class="btn btn-secondary" data-toggle="collapse" data-target="#advanced_options">進階選項</button>
-        </div>
-        <div class="input-group-append">
-          <button class="btn btn-primary" onclick="update()">
-            搜尋
+          <button id="btn_advanced" type="button" class="btn btn-secondary" data-toggle="collapse" data-target="#advanced_options">
+            <span class="d-none d-md-inline">進階</span>選項
           </button>
+          <button class="btn btn-primary" onclick="update()">搜尋</button>
         </div>
       </div>
       <!-- advanced options -->
       <div id="advanced_options" class="collapse float-sm-right form-inline mb-3">
-        <div class="form-group ml-2 mb-0">
+        <div class="form-group mr-2 mb-0">
           <label for="sel1" class="subject-title">國文：</label>
           <select id="sel1" class="custom-select" onchange="update()">
             <option value="1" selected="selected">不限</option>
@@ -73,7 +68,7 @@
             <option value="3">不採計</option>
           </select>
         </div>
-        <div class="form-group ml-2 mb-0">
+        <div class="form-group mr-2 mb-0">
           <label for="sel2" class="subject-title">英文：</label>
           <select id="sel2" class="custom-select" onchange="update()">
             <option value="1" selected="selected">不限</option>
@@ -81,7 +76,7 @@
             <option value="3">不採計</option>
           </select>
         </div>
-        <div class="form-group ml-2 mb-0">
+        <div class="form-group mr-2 mb-0">
           <label for="sel3" class="subject-title">數學：</label>
           <select id="sel3" class="custom-select" onchange="update()">
             <option value="1" selected="selected">不限</option>
@@ -89,7 +84,7 @@
             <option value="3">不採計</option>
           </select>
         </div>
-        <div class="form-group ml-2 mb-0">
+        <div class="form-group mr-2 mb-0">
           <label for="sel4" class="subject-title">社會：</label>
           <select id="sel4" class="custom-select" onchange="update()">
             <option value="1" selected="selected">不限</option>
@@ -97,7 +92,7 @@
             <option value="3">不採計</option>
           </select>
         </div>
-        <div class="form-group ml-2 mb-0">
+        <div class="form-group mr-2 mb-0">
           <label for="sel5" class="subject-title">自然：</label>
           <select id="sel5" class="custom-select" onchange="update()">
             <option value="1" selected="selected">不限</option>
@@ -105,7 +100,7 @@
             <option value="3">不採計</option>
           </select>
         </div>
-        <div class="form-group ml-2 mb-0">
+        <div class="form-group mb-0">
           <span class="ml-2" id="mode-title">搜尋模式：</span>
           <div class="custom-control custom-radio custom-control-inline">
             <input type="radio" id="mode-indexof" name="mode" class="custom-control-input" value="1" onchange="update()" checked="checked">
@@ -118,7 +113,7 @@
         </div>
       </div>
       <!-- result table -->
-      <table class="table" id="table_result">
+      <table class="table table-border" id="table_result">
         <thead class="thead-light">
           <tr>
             <th style="width:20%" class="align-middle">學校</th>
