--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52378111-4"></script>
@@ -24,17 +24,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <!-- external css -->
-  <link rel="stylesheet" href="css/common.css?v=1">
+  <link rel="stylesheet" href="css/common.css?v=2">
 </head>
 <body>
-  <nav class="navbar navbar-expand navbar-light" style="background-color: #e9ecef;">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="/">首頁</a>
-      <a class="nav-item nav-link" href="apply.html">個人申請</a>
-      <a class="nav-item nav-link" href="advanced.html">考試分發</a>
-    </div>
-  </nav>
   <div class="content">
+    <nav class="navbar navbar-expand navbar-light" style="background-color: #e9ecef;">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="/">首頁</a>
+        <a class="nav-item nav-link" href="apply.html">個人申請</a>
+        <a class="nav-item nav-link" href="advanced.html">考試分發</a>
+      </div>
+    </nav>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1>學測/指考採計科目查詢</h1>
