replace 'float-sm-right' with 'float-right'

--- a/apply.html
+++ b/apply.html
@@ -59,7 +59,7 @@
         </div>
       </div>
       <!-- advanced options -->
-      <div id="advanced_options" class="collapse float-sm-right form-inline mb-3">
+      <div id="advanced_options" class="collapse float-right form-inline mb-3">
         <div class="form-group mr-2 mb-0">
           <label for="sel1" class="subject-title">國文：</label>
           <select id="sel1" class="custom-select" onchange="update()">
