fix table border

--- a/apply.html
+++ b/apply.html
@@ -113,7 +113,7 @@
         </div>
       </div>
       <!-- result table -->
-      <table class="table table-border" id="table_result">
+      <table class="table table-bordered" id="table_result">
         <thead class="thead-light">
           <tr>
             <th style="width:20%" class="align-middle">學校</th>
