--- a/advanced.html
+++ b/advanced.html
@@ -14,7 +14,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=10; IE=9; IE=8; IE=7; IE=EDGE" />
-  <meta name="description" content="還在苦惱要怎麼準備指考嗎？使用這個簡單的小工具，能讓你清楚了解你想讀的科系採計哪些科目。">
+  <meta name="description" content="108指考將在7月舉行，還在苦惱要將心力投注在哪些科系上嗎？這個簡單的小工具，能將雜亂的校系分則整理成可清楚易懂的表格。（資料版本：108學年度）">
   <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico?v=bOME3jLmbj' />
   <title>指考考試分發─採計科目查詢【108學年】</title>
   <link rel="canonical" href="https://apply.nctu.me/advanced.html"/>
@@ -110,7 +110,7 @@
     </div>
   </div>
   <div class="footer">
-    資料版本: <a href="https://github.com/jacky030607/apply-tool/blob/master/data/advanced/data.json">20190204</a> |
+    資料版本: <a href="https://github.com/jacky030607/apply-tool/blob/master/data/advanced/data.json">20190204(108學年)</a> |
     <a href="https://github.com/jacky030607/apply-tool">GitHub</a>
   </div>
 </body>
