--- a/advanced.html
+++ b/advanced.html
@@ -110,8 +110,9 @@
     </div>
   </div>
   <div class="footer">
-    資料版本: <a href="https://github.com/jacky030607/apply-tool/blob/master/data/advanced/data.json">20190204(108學年)</a> |
-    <a href="https://github.com/jacky030607/apply-tool">GitHub</a>
+    資料版本：<a href="https://github.com/jacky030607/apply-tool/blob/master/data/advanced/data.json">20190204</a> |
+    <a href="https://github.com/jacky030607/apply-tool">GitHub</a> |
+    問題回報：jacky030607@gmail.com
   </div>
 </body>
 </html>
