--- a/apply.html
+++ b/apply.html
@@ -135,8 +135,9 @@
     </div>
   </div>
   <div class="footer">
-    資料版本: <a href="https://github.com/jacky030607/apply-tool/blob/master/data/apply/data.json">20190126(108學年)</a> |
-    <a href="https://github.com/jacky030607/apply-tool">GitHub</a>
+    資料版本：<a href="https://github.com/jacky030607/apply-tool/blob/master/data/apply/data.json">20190126</a> |
+    <a href="https://github.com/jacky030607/apply-tool">GitHub</a> |
+    問題回報：jacky030607@gmail.com
   </div>
 </body>
 </html>
