--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     </div>
   </div>
   <div class="footer">
-    <a href="https://github.com/jacky030607/apply-tool">GitHub</a>
+    <a href="https://github.com/jacky030607/apply-tool">GitHub</a> |
+    問題回報：jacky030607@gmail.com
   </div>
 </body>
 </html>
