--- a/advanced.html
+++ b/advanced.html
@@ -25,7 +25,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/floatthead/2.1.3/jquery.floatThead.min.js"></script>
   <!-- external css -->
-  <link rel="stylesheet" href="css/common.css?v=2">
+  <link rel="stylesheet" href="css/common.css?v=3">
   <link rel="stylesheet" href="css/advanced.css?v=2">
   <!-- external js -->
   <script src="js/advanced.js?v=3"></script>
@@ -112,7 +112,7 @@
   <div class="footer">
     資料版本：<a href="https://github.com/jacky030607/apply-tool/blob/master/data/advanced/data.json">20190204</a> |
     <a href="https://github.com/jacky030607/apply-tool">GitHub</a> |
-    問題回報：jacky030607@gmail.com
+    <wbr>問題回報：jacky030607@gmail.com
   </div>
 </body>
 </html>
