--- a/apply.html
+++ b/apply.html
@@ -25,7 +25,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/floatthead/2.1.3/jquery.floatThead.min.js"></script>
   <!-- external css -->
-  <link rel="stylesheet" href="css/common.css?v=2">
+  <link rel="stylesheet" href="css/common.css?v=3">
   <link rel="stylesheet" href="css/apply.css?v=1">
   <!-- external js -->
   <script src="js/apply.js?v=2"></script>
@@ -137,7 +137,7 @@
   <div class="footer">
     資料版本：<a href="https://github.com/jacky030607/apply-tool/blob/master/data/apply/data.json">20190126</a> |
     <a href="https://github.com/jacky030607/apply-tool">GitHub</a> |
-    問題回報：jacky030607@gmail.com
+    <wbr>問題回報：jacky030607@gmail.com
   </div>
 </body>
 </html>
