--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <!-- external css -->
-  <link rel="stylesheet" href="css/common.css?v=2">
+  <link rel="stylesheet" href="css/common.css?v=3">
 </head>
 <body>
   <div class="content">
@@ -51,7 +51,7 @@
   </div>
   <div class="footer">
     <a href="https://github.com/jacky030607/apply-tool">GitHub</a> |
-    問題回報：jacky030607@gmail.com
+    <wbr>問題回報：jacky030607@gmail.com
   </div>
 </body>
 </html>
