--- a/advanced.html
+++ b/advanced.html
@@ -28,7 +28,8 @@
   <link rel="stylesheet" href="css/common.css?v=4">
   <link rel="stylesheet" href="css/advanced.css?v=2">
   <!-- external js -->
-  <script src="js/advanced.js?v=4"></script>
+  <script src="js/common.js?v=1"></script>
+  <script src="js/advanced.js?v=5"></script>
 </head>
 <body>
   <div class="content">
