--- a/apply.html
+++ b/apply.html
@@ -177,11 +177,21 @@
           <tr>
             <th style="width:20%" class="align-middle">學校</th>
             <th style="width:30%" class="align-middle">科系</th>
-            <th id="t1" class="subject subject-title align-middle">國文</th>
-            <th id="t2" class="subject subject-title align-middle">英文</th>
-            <th id="t3" class="subject subject-title align-middle">數學</th>
-            <th id="t4" class="subject subject-title align-middle">社會</th>
-            <th id="t5" class="subject subject-title align-middle">自然</th>
+            <th id="t1" class="subject subject-title align-middle">
+              國<span class="d-none d-md-inline">文</span>
+            </th>
+            <th id="t2" class="subject subject-title align-middle">
+              英<span class="d-none d-md-inline">文</span>
+            </th>
+            <th id="t3" class="subject subject-title align-middle">
+              數<span class="d-none d-md-inline">學</span>
+            </th>
+            <th id="t4" class="subject subject-title align-middle">
+              社<span class="d-none d-md-inline">會</span>
+            </th>
+            <th id="t5" class="subject subject-title align-middle">
+              自<span class="d-none d-md-inline">然</span>
+            </th>
           </tr>
         </thead>
         <tbody id="result_content">
