update title & rewrite responsive elements

--- a/advanced.html
+++ b/advanced.html
@@ -16,7 +16,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=10; IE=9; IE=8; IE=7; IE=EDGE" />
   <meta name="description" content="108指考將在7月舉行，還在苦惱要將心力投注在哪些科系上嗎？這個簡單的小工具，能將雜亂的校系分則整理成可清楚易懂的表格。（資料版本：108學年度）">
   <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico?v=bOME3jLmbj' />
-  <title>指考考試分發─採計科目查詢【108學年】</title>
+  <title>指考考試分發 - 採計科目查詢（108學年）</title>
   <link rel="canonical" href="https://apply.nctu.me/advanced.html"/>
   <!-- bootstrap, jquery, popper.js and floatThead -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
@@ -43,7 +43,7 @@
     <!-- title bar -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1>指考考試分發─採計科目查詢<span class="badge badge-secondary">108學年</span></h1>
+        <h1>指考考試分發 - 採計科目查詢 <span class="badge badge-secondary">108學年</span></h1>
         <h2>來看看你想讀的科系採計哪些科目吧！</h2>
       </div>
     </div>
@@ -115,9 +115,8 @@
     </div>
   </div>
   <div class="footer">
-    資料版本：<a href="https://github.com/jacky030607/apply-tool/blob/master/data/advanced/data.json">20190204</a> |
-    <a href="https://github.com/jacky030607/apply-tool">GitHub</a> |
-    <wbr>問題回報：jacky030607@gmail.com
+    資料版本：<a href="https://github.com/jacky030607/apply-tool/blob/master/data/advanced/data.json" target="_blank">20190204</a> |
+    <a href="https://github.com/jacky030607/apply-tool" target="_blank">GitHub</a>
   </div>
 </body>
 </html>
