--- a/apply.html
+++ b/apply.html
@@ -16,7 +16,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=10; IE=9; IE=8; IE=7; IE=EDGE" />
   <meta name="description" content="面對學測五選四的來臨，還在苦惱要將心力投注在哪些科系上嗎？這個簡單的小工具，能將雜亂的校系分則整理成可清楚易懂的表格。（資料版本：108學年度）">
   <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico?v=bOME3jLmbj' />
-  <title>學測個人申請─採計科目查詢【108學年】</title>
+  <title>學測個人申請 - 採計科目查詢（108學年）</title>
   <link rel="canonical" href="https://apply.nctu.me/apply.html"/>
   <!-- bootstrap, jquery, popper.js and floatThead -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
@@ -46,7 +46,7 @@
     <!-- title bar -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1>學測個人申請─採計科目查詢<span class="badge badge-secondary">108學年</span></h1>
+        <h1>學測個人申請 - 採計科目查詢 <span class="badge badge-secondary">108學年</span></h1>
         <h2>來看看你想讀的科系採計哪些科目吧！</h2>
       </div>
     </div>
@@ -177,19 +177,19 @@
           <tr>
             <th style="width:20%" class="align-middle">學校</th>
             <th style="width:30%" class="align-middle">科系</th>
-            <th id="t1" class="subject subject-title align-middle">
+            <th id="t1" class="subject align-middle">
               國<span class="d-none d-md-inline">文</span>
             </th>
-            <th id="t2" class="subject subject-title align-middle">
+            <th id="t2" class="subject align-middle">
               英<span class="d-none d-md-inline">文</span>
             </th>
-            <th id="t3" class="subject subject-title align-middle">
+            <th id="t3" class="subject align-middle">
               數<span class="d-none d-md-inline">學</span>
             </th>
-            <th id="t4" class="subject subject-title align-middle">
+            <th id="t4" class="subject align-middle">
               社<span class="d-none d-md-inline">會</span>
             </th>
-            <th id="t5" class="subject subject-title align-middle">
+            <th id="t5" class="subject align-middle">
               自<span class="d-none d-md-inline">然</span>
             </th>
           </tr>
@@ -207,9 +207,8 @@
     </div>
   </div>
   <div class="footer">
-    資料版本：<a href="https://github.com/jacky030607/apply-tool/blob/master/data/apply/data.json">20190514</a> |
-    <a href="https://github.com/jacky030607/apply-tool">GitHub</a> |
-    <wbr>問題回報：jacky030607@gmail.com
+    資料版本：<a href="https://github.com/jacky030607/apply-tool/blob/master/data/apply/data.json" target="_blank">20190514</a> |
+    <a href="https://github.com/jacky030607/apply-tool" target="_blank">GitHub</a>
   </div>
 </body>
 </html>
