--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=10; IE=9; IE=8; IE=7; IE=EDGE" />
   <meta name="description" content="面對學測或指考的到來，還在苦惱要將心力投注在哪些科系上嗎？這個簡單的小工具，能將雜亂的校系分則整理成可清楚易懂的表格。（資料版本：108學年度）">
   <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico?v=bOME3jLmbj' />
-  <title>學測/指考採計科目查詢</title>
+  <title>學測、指考採計科目查詢</title>
   <link rel="canonical" href="https://apply.nctu.me"/>
   <!-- bootstrap, jquery and popper.js-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
@@ -37,21 +37,26 @@
     </nav>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1>學測/指考採計科目查詢</h1>
+        <h1>學測、指考採計科目查詢</h1>
         <h2>點擊上方的「個人申請」或者是「考試分發」，就可以開始查詢囉！</h2>
       </div>
     </div>
     <div class="container">
       <h3>資料來源</h3>
       <p>
-        個人申請：<a href="https://www.cac.edu.tw/">大學甄選入學委員會</a><br>
-        考試分發：<a href="https://www.uac.edu.tw/">大學考試入學分發委員會</a>
+        個人申請：<a href="https://www.cac.edu.tw/" target="_blank">大學甄選入學委員會</a><br>
+        考試分發：<a href="https://www.uac.edu.tw/" target="_blank">大學考試入學分發委員會</a>
       </p>
+      <h3>問題回報及功能建議</h3>
+      <ul>
+        <li><b>Email:</b> jacky030607@gmail.com</li>
+        <li><b>Telegram:</b> @iteresonator</li>
+        <li><b>Facebook:</b> <a href="https://www.facebook.com/jacky030607" target="_blank">黃彥傑</a></li>
+      </ul>
     </div>
   </div>
   <div class="footer">
-    <a href="https://github.com/jacky030607/apply-tool">GitHub</a> |
-    <wbr>問題回報：jacky030607@gmail.com
+    <a href="https://github.com/jacky030607/apply-tool" target="_blank">GitHub</a>
   </div>
 </body>
 </html>
