--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
     gtag('config', 'UA-52378111-4');
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-5399324227936348",
+      enable_page_level_ads: true
+    });
+  </script>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
