--- a/apply.html
+++ b/apply.html
@@ -27,10 +27,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/floatthead/2.1.3/jquery.floatThead.min.js"></script>
   <!-- external css -->
   <link rel="stylesheet" href="css/common.css?v=5">
-  <link rel="stylesheet" href="css/apply.css?v=2">
+  <link rel="stylesheet" href="css/apply.css?v=3">
   <!-- external js -->
   <script src="js/common.js?v=1"></script>
-  <script src="js/apply.js?v=6"></script>
+  <script src="js/apply.js?v=7"></script>
 </head>
 <body>
   <div class="content">
@@ -104,7 +104,7 @@
               <td>自然</td>
             </tr>
             <tr>
-              <td class='s1'>頂標</td>
+              <td class='standard_1'>頂標</td>
               <td class='fc' id='0-0' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
               <td class='fc' id='1-0' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
               <td class='fc' id='2-0' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
@@ -112,7 +112,7 @@
               <td class='fc' id='4-0' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
             </tr>
             <tr>
-              <td class='s2'>前標</td>
+              <td class='standard_2'>前標</td>
               <td class='fc' id='0-1' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
               <td class='fc' id='1-1' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
               <td class='fc' id='2-1' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
@@ -120,7 +120,7 @@
               <td class='fc' id='4-1' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
             </tr>
             <tr>
-              <td class='s3'>均標</td>
+              <td class='standard_3'>均標</td>
               <td class='fc' id='0-2' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
               <td class='fc' id='1-2' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
               <td class='fc' id='2-2' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
@@ -128,7 +128,7 @@
               <td class='fc' id='4-2' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
             </tr>
             <tr>
-              <td class='s4'>後標</td>
+              <td class='standard_4'>後標</td>
               <td class='fc' id='0-3' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
               <td class='fc' id='1-3' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
               <td class='fc' id='2-3' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
@@ -136,7 +136,7 @@
               <td class='fc' id='4-3' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
             </tr>
             <tr>
-              <td class='s5'>底標</td>
+              <td class='standard_5'>底標</td>
               <td class='fc' id='0-4' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
               <td class='fc' id='1-4' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
               <td class='fc' id='2-4' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
@@ -144,7 +144,7 @@
               <td class='fc' id='4-4' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
             </tr>
             <tr>
-              <td class='s6'>一階</td>
+              <td class='standard_6'>一階</td>
               <td class='fc' id='0-5' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
               <td class='fc' id='1-5' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
               <td class='fc' id='2-5' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
@@ -152,7 +152,7 @@
               <td class='fc' id='4-5' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
             </tr>
             <tr>
-              <td class='s7'>二階</td>
+              <td class='standard_7'>二階</td>
               <td class='fc' id='0-6' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
               <td class='fc' id='1-6' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
               <td class='fc' id='2-6' onclick='changeFilter(this.id)'><span class="oi oi-check"></span></td>
