--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=10; IE=9; IE=8; IE=7; IE=EDGE" />
-  <meta name="description" content="面對學測或指考的到來，還在苦惱要將心力投注在哪些科系上嗎？這個簡單的小工具，能將雜亂的校系分則整理成可清楚易懂的表格。（資料版本：108學年度）">
+  <meta name="description" content="109 學測個人申請、108 指考考試入學採計科目及檢定標準綜合查詢小工具。">
   <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico?v=bOME3jLmbj' />
   <title>學測、指考採計科目查詢</title>
   <link rel="canonical" href="https://apply.nctu.me"/>
